# ex1

./: CMakeLists.txt  CMakeLists_tests.txt  amount_set.c  amount_set.h  amount_set_fix.c  lior_sketch.c  main.c  main_part1.c  matamazom.c  matamazom.h  matamazom_tests_by_noa.c
tests/: amount_set_main.c  amount_set_tests.c  amount_set_tests.h  matamazom_main.c  matamazom_tests.h  test_matamazom_yonatan_and_hen.c
tests/tests_old/: amount_set_main.c  amount_set_tests.h  matamazom_tests.c
tests_by_people/: main.c
