cmake_minimum_required(VERSION 3.10)
project(ex1 C)
set(${CMAKE_C_FLAGS} -std=c99 -Wall -pedantic-errors -Werror)
link_directories(libmtm/win64)
add_executable(ex1_part2 matamazom.c amount_set.c matamazom_print.c main.c)
add_executable(Test tests/matamazom_tests.c tests/matamazom_main.c)
target_link_libraries(ex1_part2 libmtm.a)
target_link_libraries(Test libmtm.a)
